assignment1/initial/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from d:/VisualStudioCode/PPL/initial/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'&&'", "'||'", "'!'", "'='", "':='", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'.'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "RETURN", "FUNC", 
                      "TYPE", "STRUCT", "INTERFACE", "STRING", "INT", "FLOAT", 
                      "BOOLEAN", "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", 
                      "NIL", "TRUE", "FALSE", "NEWLINE", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "EQUAL", "NOT_EQUAL", "LESS", "LESS_EQUAL", 
                      "GREATER", "GREATER_EQUAL", "AND", "OR", "NOT", "ASSIGN", 
                      "ASSIGN_STATE", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "DOT", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "SEMICOLON", 
                      "COLON", "ID", "INTEGER_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "WS", "COMMENT_INLINE", "COMMENT_BLOCK", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declared_statement_list = 1
    RULE_literal = 2
    RULE_literal_primitive = 3
    RULE_mytype = 4
    RULE_primitive_type = 5
    RULE_array_type = 6
    RULE_array_dimention = 7
    RULE_array_dimention_element = 8
    RULE_array_lit_instance = 9
    RULE_list_array_value = 10
    RULE_list_array_value_element = 11
    RULE_struct_lit_instance = 12
    RULE_struct_lit_instance_body = 13
    RULE_struct_lit_instance_body_prime = 14
    RULE_struct_lit_instance_body_element = 15
    RULE_list_expression = 16
    RULE_list_expression_prime = 17
    RULE_expression = 18
    RULE_expression1 = 19
    RULE_expression2 = 20
    RULE_expression3 = 21
    RULE_expression4 = 22
    RULE_expression5 = 23
    RULE_expression6 = 24
    RULE_expression7 = 25
    RULE_function_call = 26
    RULE_method_call = 27
    RULE_temp_expression6 = 28
    RULE_list_statement = 29
    RULE_list_statement_prime = 30
    RULE_statement = 31
    RULE_declared_statement = 32
    RULE_variables_declared = 33
    RULE_variables_declared_without_semi_for_loop = 34
    RULE_constants_declared = 35
    RULE_function_declared = 36
    RULE_function_body_container = 37
    RULE_method_declared = 38
    RULE_receiver_container = 39
    RULE_struct_declared = 40
    RULE_struct_declared_body = 41
    RULE_struct_declared_body_element = 42
    RULE_interface_declared = 43
    RULE_interface_declared_body = 44
    RULE_interface_declared_element = 45
    RULE_interface_parameter_container = 46
    RULE_list_interface_parameter = 47
    RULE_list_interface_parameter_prime = 48
    RULE_list_interface_parameter_element = 49
    RULE_assignment_statement = 50
    RULE_assignment_operator = 51
    RULE_lhs_assignment_statement = 52
    RULE_assignment_statement_without_semi_for_loop = 53
    RULE_if_statement = 54
    RULE_else_if_clause = 55
    RULE_else_if_clause_content = 56
    RULE_else_clause = 57
    RULE_for_statement = 58
    RULE_basic_for_loop = 59
    RULE_initialization_for_loop = 60
    RULE_array_for_loop = 61
    RULE_break_statement = 62
    RULE_continue_statement = 63
    RULE_call_statement = 64
    RULE_return_statement = 65

    ruleNames =  [ "program", "declared_statement_list", "literal", "literal_primitive", 
                   "mytype", "primitive_type", "array_type", "array_dimention", 
                   "array_dimention_element", "array_lit_instance", "list_array_value", 
                   "list_array_value_element", "struct_lit_instance", "struct_lit_instance_body", 
                   "struct_lit_instance_body_prime", "struct_lit_instance_body_element", 
                   "list_expression", "list_expression_prime", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "function_call", 
                   "method_call", "temp_expression6", "list_statement", 
                   "list_statement_prime", "statement", "declared_statement", 
                   "variables_declared", "variables_declared_without_semi_for_loop", 
                   "constants_declared", "function_declared", "function_body_container", 
                   "method_declared", "receiver_container", "struct_declared", 
                   "struct_declared_body", "struct_declared_body_element", 
                   "interface_declared", "interface_declared_body", "interface_declared_element", 
                   "interface_parameter_container", "list_interface_parameter", 
                   "list_interface_parameter_prime", "list_interface_parameter_element", 
                   "assignment_statement", "assignment_operator", "lhs_assignment_statement", 
                   "assignment_statement_without_semi_for_loop", "if_statement", 
                   "else_if_clause", "else_if_clause_content", "else_clause", 
                   "for_statement", "basic_for_loop", "initialization_for_loop", 
                   "array_for_loop", "break_statement", "continue_statement", 
                   "call_statement", "return_statement" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    RETURN=4
    FUNC=5
    TYPE=6
    STRUCT=7
    INTERFACE=8
    STRING=9
    INT=10
    FLOAT=11
    BOOLEAN=12
    CONST=13
    VAR=14
    CONTINUE=15
    BREAK=16
    RANGE=17
    NIL=18
    TRUE=19
    FALSE=20
    NEWLINE=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    EQUAL=27
    NOT_EQUAL=28
    LESS=29
    LESS_EQUAL=30
    GREATER=31
    GREATER_EQUAL=32
    AND=33
    OR=34
    NOT=35
    ASSIGN=36
    ASSIGN_STATE=37
    ADD_ASSIGN=38
    SUB_ASSIGN=39
    MUL_ASSIGN=40
    DIV_ASSIGN=41
    MOD_ASSIGN=42
    DOT=43
    LPAREN=44
    RPAREN=45
    LBRACE=46
    RBRACE=47
    LBRACK=48
    RBRACK=49
    COMMA=50
    SEMICOLON=51
    COLON=52
    ID=53
    INTEGER_LIT=54
    FLOAT_LIT=55
    STRING_LIT=56
    WS=57
    COMMENT_INLINE=58
    COMMENT_BLOCK=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared_statement_list(self):
            return self.getTypedRuleContext(MiniGoParser.Declared_statement_listContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.declared_statement_list()
            self.state = 133
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declared_statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared_statement(self):
            return self.getTypedRuleContext(MiniGoParser.Declared_statementContext,0)


        def declared_statement_list(self):
            return self.getTypedRuleContext(MiniGoParser.Declared_statement_listContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declared_statement_list




    def declared_statement_list(self):

        localctx = MiniGoParser.Declared_statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declared_statement_list)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.declared_statement()

                self.state = 136
                self.declared_statement_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.declared_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal_primitive(self):
            return self.getTypedRuleContext(MiniGoParser.Literal_primitiveContext,0)


        def array_lit_instance(self):
            return self.getTypedRuleContext(MiniGoParser.Array_lit_instanceContext,0)


        def struct_lit_instance(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_lit_instanceContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_literal




    def literal(self):

        localctx = MiniGoParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18, 19, 20, 54, 55, 56]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.literal_primitive()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.array_lit_instance()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.struct_lit_instance()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_primitiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LIT(self):
            return self.getToken(MiniGoParser.INTEGER_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MiniGoParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_literal_primitive




    def literal_primitive(self):

        localctx = MiniGoParser.Literal_primitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literal_primitive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 126100789568208896) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MytypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MiniGoParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MiniGoParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_mytype




    def mytype(self):

        localctx = MiniGoParser.MytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mytype)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MiniGoParser.ID)
                pass
            elif token in [9, 10, 11, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.primitive_type()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MiniGoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MiniGoParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MiniGoParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MiniGoParser.STRING, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_primitive_type




    def primitive_type(self):

        localctx = MiniGoParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_dimention(self):
            return self.getTypedRuleContext(MiniGoParser.Array_dimentionContext,0)


        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MiniGoParser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array_type




    def array_type(self):

        localctx = MiniGoParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.array_dimention()
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [53]:
                self.state = 156
                self.match(MiniGoParser.ID)
                pass
            elif token in [9, 10, 11, 12]:
                self.state = 157
                self.primitive_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_dimentionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_dimention_element(self):
            return self.getTypedRuleContext(MiniGoParser.Array_dimention_elementContext,0)


        def array_dimention(self):
            return self.getTypedRuleContext(MiniGoParser.Array_dimentionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array_dimention




    def array_dimention(self):

        localctx = MiniGoParser.Array_dimentionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_dimention)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.array_dimention_element()

                self.state = 161
                self.array_dimention()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.array_dimention_element()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_dimention_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(MiniGoParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniGoParser.RBRACK, 0)

        def INTEGER_LIT(self):
            return self.getToken(MiniGoParser.INTEGER_LIT, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_array_dimention_element




    def array_dimention_element(self):

        localctx = MiniGoParser.Array_dimention_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_dimention_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MiniGoParser.LBRACK)
            self.state = 167
            _la = self._input.LA(1)
            if not(_la==53 or _la==54):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 168
            self.match(MiniGoParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_lit_instanceContext(ParserRuleContext):
        __slots__ = 'parser'
